# sat_test

./: CMakeLists.txt  README.md
fsw/inc/: encrypt_app.h
fsw/src/: encrypt_app.c  encrypt_app_events.h  encrypt_app_msg.h  encrypt_app_version.h
include/: encrypt_app.h
src/: encrypt_app.c  main.c
tools/ground_station/: CMakeLists.txt  main.c
